--- a/public/css/adoptform.css
+++ b/public/css/adoptform.css
@@ -58,7 +58,7 @@ section {
   }
   
   .navbar {
-    background-color: #AFA2D0;
+    background-color: #92A8D1;
       display: flex;
       justify-content: space-between;
       width: 100%;
@@ -71,16 +71,17 @@ section {
   .nav-link {
       list-style-type: none;
       display: flex;
-      gap: 30px;
       align-items: center;
+      gap: 20px; 
+      padding-right: 40px;
   }
   
   .nav-link li {
-      font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: 23px;
-      margin-top: 0;
+    font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 23px;
+      margin-top: 0; 
       display: inline;
-      justify-content: space-between;
+      position: relative;
   }
   
   /* Links in Navigation */
@@ -197,7 +198,7 @@ section {
 
 .outer-container {
     position: absolute;
-    left: 275px;
+    left: 200px;
     top: 200px;
     display: flex;
     justify-content: center;
