--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -454,5 +454,104 @@ h2 {
     background-color: #ddd;
 }
   
+.popup{
+  width: 400px;
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  background-color: #fff;
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  visibility: hidden;
+  transition: transform 0.4s , top 0.4s;
+}
+
+.popup1{
+  width: 400px;
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  background-color: #fff;
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  visibility: hidden;
+  transition: transform 0.4s , top 0.4s;
+}
+
+.open-popup{
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.open-popup1{
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+
+.popup img{
+  width: 100px;
+  margin-top: -50px;
+  outline: none;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.popup1 img{
+  width: 100px;
+  margin-top: -50px;
+  outline: none;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.popup h2{
+  font-size: 3rem;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+
+.popup1 h2{
+  font-size: 3rem;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+
+
+.popup button{
+  width: 100%;
+  margin-top: 50px;
+  padding: 10px 0;
+  background-color: #AFA2D0;
+  color: #fff;
+  border: 0;
+  outline: none;
+  font-size: 2rem;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.popup1 button{
+  width: 100%;
+  margin-top: 50px;
+  padding: 10px 0;
+  background-color: #AFA2D0;
+  color: #fff;
+  border: 0;
+  outline: none;
+  font-size: 2rem;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
 
 
