--- a/public/css/add_post.css
+++ b/public/css/add_post.css
@@ -80,7 +80,9 @@ display: flex;
   display: flex;
   gap: 20px; 
   align-items: center; 
+  padding-right: 40px;
 }
+
 
 .nav-link li {
 font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
