--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -554,4 +554,42 @@ h2 {
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
+.user-dropdown-button {
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+  position: relative;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  font-size: 16px; /* Ensure font size matches */
+  line-height: 40px; /* Keep this consistent */
+  padding: 10px 15px; /* Increase padding for inner space */
+  background-color: transparent; /* Make the button background transparent */
+  border: 1px solid #f7c9cb; /* Optional: Add a border color */
+  border-radius: 5px; /* Optional rounded corners */
+  cursor: pointer;
+  display: inline-block; /* Ensure proper sizing */
+  font-size: 24px;
+  align-items: center; /* Center vertically */
+  justify-content: center; /* Center horizontally */
+  
+}
+
+
+
+.user-dropdown-content {
+  display: none; /* Hidden by default */
+ 
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    position: relative;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+    line-height: 40px; 
+    background: white; 
+}
+
+.user-dropdown-content.show {
+  display: block; /* Show when .show class is added */
+}
