--- a/public/css/user.css
+++ b/public/css/user.css
@@ -33,6 +33,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
   } 
 
   
@@ -43,6 +44,7 @@
     background-size: auto; 
     background-color: #FFEFEF;
     overflow-x: hidden;
+   
   }
 
   .hamburger {
