sira pa user post cat detail

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -165,11 +165,6 @@
    
     }
 
-.wrapper .form-box{
-   
-   
-}
-
 
   
   
@@ -200,10 +195,13 @@
     transition: .5s;
   }
 
-.input-box input:focus~label,
-.input-box input:valid~label{
-    top: -5px;
-}
+  .input-box input:focus~label,
+  .input-box input.filled~label {
+      top: -5px;
+      font-size: 0.8em; /* Optional for better scaling */
+      color: gray; /* Optional for a visual cue */
+  }
+  
 
   .input-box input{
     width: 100%;
