--- a/public/css/userdropdown.css
+++ b/public/css/userdropdown.css
@@ -1,3 +1,24 @@
+.user-dropdown-button {
+    width: 150px;
+    height: 60px;
+    font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 5px;
+    background-color: transparent;
+    border: 1px solid #f7c9cb;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    transition: background-color 0.3s ease;
+}
+
+
 .user-dropdown-content {
     position: absolute;
     text-align: center;
@@ -29,7 +50,8 @@
     color: black;
     text-decoration: none;
     transition: background-color 0.3s ease;
-}
+justify-content: center
+;}
   
 .user-dropdown-content a:hover {
     background-color: #f1f1f1; /* Hover effect for links */
